samples/_failures_safe/1761297420_f66c55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01e9e966.c: In function ‘main’:
./samples/SAFE/__tmp_01e9e966.c:138:20: error: missing terminating " character
  138 |             printf("Invalid timestamp format. Use
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_01e9e966.c:138:13: error: expected expression at end of input
  138 |             printf("Invalid timestamp format. Use
      |             ^~~~~~
./samples/SAFE/__tmp_01e9e966.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01e9e966.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01e9e966.c:138:13: error: expected declaration or statement at end of input
